--- a/public/css/companies.css
+++ b/public/css/companies.css
@@ -7,10 +7,8 @@ svg {
   font-size: 20px;
 }
 
-.x-axis {
+.x-axis text {
   text-anchor: end;
-}
-
-.column-names {
+  transform: rotate(-40deg);
   font-weight: bold;
 }
