--- a/public/css/equity.css
+++ b/public/css/equity.css
@@ -1,7 +1,11 @@
 svg {
   border: 1px solid gray;
+  margin-top: 20px;
 }
 
+line {
+  color: lightblue;
+}
 .axis-label {
   text-anchor: middle;
   font-size: 20px;
@@ -25,17 +29,24 @@ svg {
   stroke-width: 2px;
 }
 
+.controls {
+  margin-top: -100px;
+  position: relative;
+  top: -100px;
+  left: 70px;
+}
+
 #slider {
   position: relative;
   height: 30px;
-  width: 50%;
+  width: 80%;
   background-color: #eeeef5;
 }
 
 #selected-range {
-  width: 100px;
-  text-align: center;
+  margin-left: 20px;
   font-size: 12px;
+  text-align: center;
 }
 
 .controls {
